<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TVNom"
            android:layout_width="11dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:labelFor="@+id/ETUtilisateur"
            android:text="@string/TENom"
            android:textAlignment="textStart"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/ETUtilisateur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:enabled="false"
            android:fontFamily="@font/roboto"
            android:hint="@string/TEHNom"
            android:inputType="text|textPersonName"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TVAdresse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:labelFor="@+id/ETAdresse"
            android:text="@string/TEAdresse"
            android:textAlignment="textStart"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/ETAdresse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:enabled="false"
            android:fontFamily="@font/roboto"
            android:hint="@string/TEHAdresse"
            android:inputType="text|textPostalAddress"
            android:singleLine="true" />

        <ImageButton
            android:id="@+id/IBMap"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_map_black_24dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TVSociété"
            android:layout_width="11dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:labelFor="@+id/ETAdresse"
            android:text="@string/TVSociété"
            android:textAlignment="textStart"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/ETSociété"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:enabled="false"
            android:fontFamily="@font/roboto"
            android:hint="@string/TEHSociété"
            android:inputType="text|textPostalAddress"
            android:singleLine="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

    </LinearLayout>

</LinearLayout>